# advent-of-code-rust

.github/workflows/: codeql.yml  rust-clippy.yml
2020/day-01/: Cargo.toml
2020/day-02/: Cargo.toml
2020/day-03/: Cargo.toml
2020/day-04/: Cargo.toml
2020/day-05/: Cargo.toml
2020/day-06/: Cargo.toml
2020/day-07/: Cargo.toml
2020/day-08/: Cargo.toml
2020/day-09/: Cargo.toml
2020/day-11/: Cargo.toml
2020/day-12/: Cargo.toml
2020/day-14/: Cargo.toml
2020/day-15/: Cargo.toml
2020/day-16/: Cargo.toml
2020/day-17/: Cargo.toml
2020/day-18/: Cargo.toml
2020/day-19/: Cargo.toml
2020/day-23/: Cargo.toml
2020/santa-replace-18/: Cargo.toml
2021/day-01/: Cargo.toml
2021/day-02/: Cargo.toml
2021/day-03/: Cargo.toml
2021/day-04/: Cargo.toml
2021/day-05/: Cargo.toml
2021/day-06/: Cargo.toml
2021/day-07/: Cargo.toml
2021/day-08/: Cargo.toml
2021/day-09/: Cargo.toml
2021/day-10/: Cargo.toml
2021/day-11/: Cargo.toml
2021/day-12/: Cargo.toml
2021/day-13/: Cargo.toml
2021/day-14/: Cargo.toml
2021/day-15/: Cargo.toml
2021/day-16/: Cargo.toml
2021/day-17/: Cargo.toml
2021/day-18/: Cargo.toml
2021/day-20/: Cargo.toml
2021/day-21/: Cargo.toml
2021/day-22/: Cargo.toml
2021/day-23/: Cargo.toml
2021/day-24/: Cargo.toml
2022/day-04/: Cargo.toml
2022/day-06/: Cargo.toml
2022/day-07/: Cargo.toml
2022/day-08/: Cargo.toml
2022/day-09/: Cargo.toml
2022/day-10/: Cargo.toml
2022/day-11/: Cargo.toml
2022/day-12/: Cargo.toml
2022/day-13/: Cargo.toml
2022/day-14/: Cargo.toml
2022/day-15/: Cargo.toml
2022/day-17/: Cargo.toml
2022/day-18/: Cargo.toml
2022/day-19/: Cargo.toml
2022/day-20/: Cargo.toml
2022/day-21/: Cargo.toml
2022/day-22/: Cargo.toml
2022/day-23/: Cargo.toml
2022/day-24/: Cargo.toml
2022/day-25/: Cargo.toml
