[package]
name = "day_02"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
criterion = "0.5.1"
regex = "1.10.2"
lazy_static = "1.4.0"
nom = "7.1.3"

[[bin]]
name = "2020day2part1"
path = "./src/part1.rs"

[[bin]]
name = "2020day2part2"
path = "./src/part2.rs"


[[bench]]
name = "benchmark"
harness = false
