[package]
name = "day_04"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
nom = "7.1.3"
nom_locate = "4.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "2020day4part1"
path = "./src/part1.rs"

[[bin]]
name = "2020day4part2"
path = "./src/part2.rs"


[[bench]]
name = "benchmark"
harness = false
