[package]
name = "day_08"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
nom_locate = "4.2.0"
bitvec = "1.0.1"
daggy = "0.8.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "2020day8part1"
path = "./src/part1.rs"

[[bin]]
name = "2020day8part2"
path = "./src/part2.rs"


[[bench]]
name = "benchmark"
harness = false
