[package]
name = "day_12"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
nom = "6.2.2"
nom_locate = "3.0.2"
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "part1"
path = "./src/part1.rs"

[[bin]]
name = "part2"
path = "./src/part2.rs"

[lib]
name = "today"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false
