[package]
name = "day_15"
version = "0.1.0"
authors = ["Christopher Biscardi <chris@christopherbiscardi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
nom_locate = "4.2.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
name = "part1"
path = "./src/part1.rs"

[[bin]]
name = "part2"
path = "./src/part2.rs"

[lib]
name = "today"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false
