[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitvec = "0.22.3"
dhat = { version = "0.3.2", optional = true }
itertools = "0.11.0"
ndarray = "0.15.6"
nom = "7.1.0"

[profile.release]
debug = 1
