[package]
name = "day-04"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitvec = "1.0.1"
dhat = { version = "0.3.2", optional = true }
itertools = "0.12.1"
ndarray = "0.15.6"
nom = "7.1.3"

[profile.release]
debug = 1
