[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
dhat = { version = "0.3.2", optional = true }
nom = "8.0.0"

[profile.dhat]
inherits = "release"
debug = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
