[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bitvec = "1.0.1"
dhat = { version = "0.3.2", optional = true }
hex = "0.4.3"
itertools = "0.11.0"
ndarray = "0.15.6"
nom = "7.1.0"
nom-supreme = "0.8.0"
once_cell = "1.8.0"
petgraph = "0.6.3"

[profile.dhat]
inherits = "release"
debug = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false
