[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
nom = "7.1.1"
radix_fmt = "1.0.0"
rayon = "1.7.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
rstest = "0.16.0"
rstest_reuse = "0.4.0"
