[package]
name = "day-25"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
nom = "8.0.0"
radix_fmt = "1.0.0"
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
rstest = "0.25.0"
rstest_reuse = "0.7.0"
